# Puzzle

./: CMakeLists.txt
src/: CMakeLists.txt
src/common/utils/: CMakeLists.txt  assert.cpp  log.cpp
src/include/common/utils/: assert.h  config.h  log.h  spin_lock.h
test/: CMakeLists.txt
test/assert/: assert_test.cpp
test/log/: log_test.cpp
